--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
 <div class="content container mt-4">
   <h1>Bienvenido al Sistema de Gestión de Contratos</h1>
   <p>Utiliza el menú lateral para registrar nuevos contratos o listar los existentes.</p>
+
+  <div class="mt-4 p-3 border rounded bg-light">
+    <h5><i class="bi bi-person-circle me-2"></i>DE: Miguel Angel Ampuero Huaraya</h5>
+    <ul class="list-unstyled">
+      <li><i class="bi bi-envelope-fill me-2"></i>Correo: <a href="mailto:jmimpresionessac@hotmail.com">jmimpresionessac@hotmail.com</a></li>
+      <li><i class="bi bi-building me-2"></i>Oficina: Av. Panam. Norte Km. 13.5 C.C. Fiori 2do Piso Int. 238 Urb. Fiori (Frente al ex Terminal de Fiori - S.M.P. - Lima)</li>
+      <li><i class="bi bi-tools me-2"></i>Taller: Av. Panam. Norte Km. 13.5 Int. 256A C.C. Fiori 2do Piso (Frente al ex Terminal de Fiori) S.M.P. - Lima</li>
+      <li><i class="bi bi-receipt-cutoff me-2"></i>Servicios: Boletas de Venta, Guías de Remisión, Factura, Tarjetas, Volantes, Folders, etc.</li>
+    </ul>
+  </div>
+
+  <div class="mt-4 p-3 border rounded bg-light">
+    <h5><i class="bi bi-bank me-2"></i>Datos Bancarios</h5>
+    <ul class="list-unstyled">
+      <li><strong>BCP:</strong> Miguel Angel Ampuero Huaraya</li>
+      <li>CTA. AHORROS - SOLES: <code>19193539117054</code></li>
+      <li>CCI: <code>002-19119353911705451</code></li>
+      <li class="mt-3"><strong>INTERBANK:</strong> Miguel Angel Ampuero Huaraya</li>
+      <li>CTA. AHORROS - SOLES: <code>8963412209925</code></li>
+      <li>CCI: <code>003-8960134122099</code></li>
+    </ul>
+  </div>
 </div>
 
 </body>
