--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Inicio - Sistema de Contratos</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/estilo.css" />
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
 
+<!-- Sidebar -->
 <div class="sidebar text-center">
   <a href="index.html">
     <img src="img/logo.png" alt="Logo" class="img-fluid" style="max-width: 180px; margin-bottom: 15px;">
@@ -17,8 +18,10 @@
   <a href="index.html" class="active"><i class="bi bi-house-door-fill"></i> Inicio</a>
   <a href="registrar.html"><i class="bi bi-file-earmark-plus-fill"></i> Registrar Contrato</a>
   <a href="php/listar.php"><i class="bi bi-card-list"></i> Listar Contratos</a>
+  <a href="php/dashboard.php"><i class="bi bi-speedometer2"></i> Dashboard</a>
 </div>
 
+<!-- Contenido principal -->
 <div class="content container mt-4">
   <h1>Bienvenido al Sistema de Gestión de Contratos</h1>
   <p>Utiliza el menú lateral para registrar nuevos contratos o listar los existentes.</p>
