--- a/registrar.html
+++ b/registrar.html
@@ -4,19 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Registrar Contrato</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="css/estilo.css" />
 </head>
 <body>
 
+<!-- Sidebar -->
 <div class="sidebar text-center">
-  <a href="index.html">
+  <a href="registrar.html">
     <img src="img/logo.png" alt="Logo" class="img-fluid" style="max-width: 180px; margin-bottom: 15px;">
   </a>
   <a href="index.html"><i class="bi bi-house-door-fill"></i> Inicio</a>
-  <a href="registrar.html" class="active"><i class="bi bi-file-earmark-plus-fill"></i> Registrar Contrato</a>
+  <a href="registrar.html" class="active" ><i class="bi bi-file-earmark-plus-fill"></i> Registrar Contrato</a>
   <a href="php/listar.php"><i class="bi bi-card-list"></i> Listar Contratos</a>
+  <a href="php/dashboard.php"><i class="bi bi-speedometer2"></i> Dashboard</a>
 </div>
 
 <div class="content container mt-4">
